.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:04:35 **** Incremental Build of configuration Debug for project 09EjercicioClase9 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o UseQueue.o "..\\UseQueue.c" 
In file included from ..\UseQueue.c:9:0:
c:\mingw\include\stdio.h:454:38: error: 'printf' redeclared as different kind of symbol
 _CRTIMP __cdecl __MINGW_NOTHROW  int printf (const char *, ...);
                                      ^~~~~~
In file included from ..\UseQueue.c:7:0:
..\queue.h:15:16: note: previous declaration of 'printf' was here
 typedef void (*printf)(Type);
                ^~~~~~
11:33:00 **** Incremental Build of configuration Debug for project 09EjercicioClase9 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o UseQueue.o "..\\UseQueue.c" 
..\UseQueue.c: In function 'printInt':
..\UseQueue.c:12:14: error: invalid operands to binary * (have 'char *' and 'int *')
  printf("d " *(int*)e);
         ~~~~ ^~~~~~~~
11:33:13 **** Incremental Build of configuration Debug for project 09EjercicioClase9 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o UseQueue.o "..\\UseQueue.c" 
..\UseQueue.c: In function 'printInt':
..\UseQueue.c:12:15: error: invalid operands to binary * (have 'char *' and 'int *')
  printf("%d " *(int*)e);
         ~~~~~ ^~~~~~~~
